# pyhrrrzarr

./: .gitignore  README.md  example.env  pyproject.toml
notebooks/: precip.ipynb  scratch.ipynb
src/pyhrrrzarr/: main.py  schema.py
src/pyhrrrzarr/hrrr/: schema.py
src/pyhrrrzarr/hrrrzarr/: chunk.py  fetch.py  fs.py  load.py  postprocess.py  projection.py  requests.py  s3.py  schema.py
tests/: test_me.py
tests/integration/: test_fetch_hrrrzarr.py
tests/unit/: test_hrrr_schema.py
