[project]
authors = [{name = "ilmcconnell", email = "iain.mcconnell@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "pyhrrrzarr"
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
pyhrrrzarr = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.7.1,<0.8"
pydantic = ">=2.9.2,<3"
botocore = ">=1.35.53,<2"
numpy = ">=2.1.2,<3"
s3fs = ">=0.4.2,<0.5"
cartopy = ">=0.24.0,<0.25"
numcodecs = ">=0.13.1,<0.14"
python-dotenv = ">=1.0.1,<2"
ipykernel = ">=6.29.5,<7"
xarray = ">=2024.10.0,<2025"
zarr = ">=2.18.3,<3"
tqdm = ">=4.66.6,<5"
aiofiles = ">=24.1.0,<25"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"
